Feat : CommentService, MemberInfo(not completed)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.profiles.active=database
 
-#mybatis.type-aliases-package=com.depromeet.domain
+mybatis.type-aliases-package=com.depromeet.team.domain
 mybatis.mapper-locations=com/depromeet/team/*.xml
