--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=database
+spring.profiles.active=production
 
 mybatis.type-aliases-package=com.depromeet.team.domain
 mybatis.mapper-locations=com/depromeet/team/*.xml
